Fix header overhang on mobile

--- a/src/components/main/App.css
+++ b/src/components/main/App.css
@@ -24,14 +24,16 @@
 @media only screen and (max-width: 768px) {
   .App-header {
     grid-template:
-      "name"
-      "navbar";
+      "name" min-content
+      "navbar" min-content;
+    height: min-content;
     left: 0;
+    padding: 0;
   }
   .App-name {
     font-size: 2.4em;
     margin-left: 0;
-    padding-bottom: 10px;
+    padding: 20px 0px 10px 0px;
     text-align: center;
     width: 100%;
   }
@@ -42,9 +44,11 @@
       "name"
       "navbar";
     left: 0;
+    padding: 0;
   }
   .App-name {
     font-size: 7em;
+    margin-left: 0;
     padding: 40px 0px 30px 0px;
     text-align: center;
     width: 100%;
