--- a/src/components/main/Canvas.css
+++ b/src/components/main/Canvas.css
@@ -15,10 +15,16 @@
 @media only screen and (max-width: 768px) {
   .Canvas {
     border: none;
+    margin-top: 0;
+    min-height: 95%;
+    max-width: unset;
+    width: 95%;
   }
 }
 @media only screen and (orientation: portrait) and (min-width: 1000px) {
   .Canvas {
     border: none;
+    min-height: unset;
+    max-width: unset;
   }
 }
